--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-notification": "^2.3.0",
     "@tauri-apps/plugin-opener": "^2",
     "@types/node": "^24.0.4",
     "file-saver": "^2.0.5",
